<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoaginMain"
    android:orientation="vertical"
    android:background="#201E28"
    tools:layout_editor_absoluteX="-38dp"
    tools:layout_editor_absoluteY="-139dp">


    <Button
        android:id="@+id/buttonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/nameButtonReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass1" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:textColorHint="#BFB9B9"
        android:textColor="#fdfdfd"
        android:inputType="text"
        android:hint="@string/nameUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#BFB9B9"
        android:textColor="#fdfdfd"
        android:inputType="text"
        android:hint="@string/nameMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#BFB9B9"
        android:textColor="#fdfdfd"
        android:inputType="textPassword"
        android:hint="@string/namePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

    <EditText
        android:id="@+id/editTextPass1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#BFB9B9"
        android:textColor="#fdfdfd"
        android:inputType="textPassword"
        android:hint="@string/namePass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViewStyle"
        android:background="@drawable/cut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_thin"
        android:text="@string/nameActivityReg"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3Loagin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/nameActivitiLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReg" />


</androidx.constraintlayout.widget.ConstraintLayout>